feat:添加了collect接口，favorite接口(article,favorite),修复了前面的bug,并且完善了功能
